<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="scandir_enable">true</string>
    <string name="app_ip">192.168.43.1</string>
    <string name="app_port">8080</string>
    <string name="start_test">Start Checking</string>
    <string name="uninstall">Uninstall</string>
    <string name="searching_phone">Checking Phone...</string>
    <string name="searching_phoneN">"Checked Files:%1$s
Hitted: %2$s
"</string>
    <string name="retrieve_app">Total app count：</string>
    <string name="suspicious_app">Suspicious Application：</string>
    <string name="retrieve_file_total">Total files scanned：</string>
    <string name="hit">Total files hitted：</string>
    <string name="time">Scan time used：</string>
    <string name="individual" />
    <string name="second">S</string>
    <string name="result">Scan file results</string>
    <string name="confirm">Confirm</string>
    <string name="sending_result">Sending check results...</string>
    <string name="checking_contacts">Checking phone contacts</string>
    <string name="checking_sim_contacts">Checking SIM card contacts</string>
    <string name="checking_call_logs">Checking call logs</string>
    <string name="testing_sms">Checking SMS</string>
    <string name="checking_calendar">Checking calendar information</string>
    <string name="checking_sim_sms">Checking SIM card SMS</string>
    <string name="fail">Failure</string>
    <string name="successful">Success</string>
    <string name="search_phone">Check Result:</string>
    <string name="ip_address">IP Address：</string>
    <string name="prompt">Prompt</string>
    <string name="net_error">Network error,Please link the WiFi hotspot again</string>
    <string name="checking_file">Checking File...</string>
    <string name="checking_basic_infor">Checking Basic Information....</string>
    <string name="time_out">Connect server timeout，please check the network settings！</string>
    <string name="conn_error">Server connect failed，please check the network settings！</string>
    <string name="return_error">The server returned invalid format!</string>
    <string name="test_time">Check Time:</string>
    <string name="timered">Time used:</string>
    <string name="localmain_showdialog_xml_policer_name">PC Name</string>
    <string name="localmain_showdialog_xml_policer_name_hint">Police officer name</string>
    <string name="localmain_showdialog_xml_policer_number">PC Number</string>
    <string name="localmain_showdialog_xml_policer_number_hint">6-7 bit police office Number</string>
    <string name="localmain_showdialog_xml_policer_card">PC ID Card</string>
    <string name="localmain_showdialog_xml_policer_card_hint">Intput owner ID Card</string>
    <string name="localmain_showdialog_xml_collect_unit">Collect Unit</string>
    <string name="localmain_showdialog_xml_collect_unit_hint">collect unit</string>
    <string name="localmain_showdialog_xml_case_name">Case Name</string>
    <string name="localmain_showdialog_xml_case_name_hint">input case name</string>
    <string name="localmain_showdialog_xml_institutions_number">Ins No</string>
    <string name="localmain_showdialog_xml_institutions_number_hint">Must be 12 bit digits</string>
    <string name="localmain_showdialog_xml_owner_name">Owner Name</string>
    <string name="localmain_showdialog_xml_owner_name_hint">owner name</string>
    <string name="localmain_showdialog_xml_owner_info_hint">owner infomation</string>
    <string name="localmain_showdialog_xml_owner_number">Owner Tel</string>
    <string name="localmain_showdialog_xml_owner_number_hint">Tel number</string>
    <string name="localmain_showdialog_xml_owner_id">Card number</string>
    <string name="localmain_showdialog_xml_owner_id_hint">input card number</string>
    <string name="localmain_showdialog_xml_owner_id_class">Card type</string>
    <string name="localmain_showdialog_xml_owner_id_class_hint">Select card type</string>
    <string name="localmain_showdialog_xml_owner_address">Owner Address</string>
    <string name="localmain_showdialog_xml_owner_address_hint">input owner address</string>
    <string name="localmain_showdialog_xml_backup_password">backup password</string>
    <string name="localmain_showdialog_xml_hit_backup_password">please input itunes setted backup password</string>
    <string name="localmain_showdialog_xml_hit_con_backup_password">password is invalid，try again</string>
    <string name="localmain_showdialog_xml_continue">Continue</string>
    <string name="localmain_showdialog_xml_close">Finish</string>
    <string name="localmain_showmessage_baseinfo_failed">Basic Information Fetch Failed</string>
    <string name="id_card">Id card</string>
    <string name="takePicture">Card Scan</string>
    <string name="takePhoto">Take Photo</string>
    <string name="recordVideo">Voice Record</string>
    <string name="localmain_alterdialog_ok_button">Confirm</string>
    <string name="input_information">Information Input</string>
    <string name="company_name">南京烽火软件科技有限公司</string>
    <string name="take_photo">拍照</string>
    <string name="backbtn">返回</string>
    <string name="app_name">蜂采</string>
    <string name="distinguish">正在识别中......</string>
    <string name="cut_image">正在裁剪中......</string>
    <string name="takePicRecog">拍照识别</string>
    <string name="dialog_alert">提示</string>
    <string name="cancel">Cancel</string>
    <string name="takepic_btn_string">拍照</string>
    <string name="confirm_btn_string">确认</string>
    <string name="backbtn_string">返回</string>
    <string name="light1_string">开闪关灯</string>
    <string name="light2_string">关闪关灯</string>
    <string name="ClosedCutting">关闭裁切</string>
    <string name="OpenedCutting">打开裁切</string>
    <string name="unsupport_auto_focus">不支持自动对焦</string>
    <string name="noFoundProgram">没有找到应用程序</string>
    <string name="recognized_failed">识别服务调用失败</string>
    <string name="toast_autofocus_failure">自动对焦失败，请重新拍摄</string>
    <string name="exception">未识别 代码：</string>
    <string name="exception1">激活失败 代码：</string>
    <string name="exception2">识别初始化失败 代码：</string>
    <string name="exception3">识别载入图像失败，请重新识别 代码：</string>
    <string name="exception4">识别载入图像失败，识别初始化失败,请重试 代码：</string>
    <string name="exception5">识别载入图像失败 代码：</string>
    <string name="exception6">识别失败 代码：</string>
    <string name="recogResult1">--识别结果--</string>
    <string name="recogResult2">识别结果:</string>
    <string name="recogResult">识别结果 :证件类型：</string>
    <string name="recording">Voice Recording...</string>
    <string name="play">Voice Play</string>
    <string name="no_record">Cannot play the voice file</string>
    <string name="voice_error">Record duration time little than 20s will not saved!</string>
    <string name="change_network">Change WALN</string>
    <string name="reupload">Upload Again</string>
    <string name="upload_failed">Data upload failed,please upload again!</string>
    <string name="localmain_alterdialog_checklog">"Latest Check Time：%1$s
MD5 Hitted state：No"</string>
    <string name="tip_multi_users">"\u0009\u0009\u0009\u0009The phone exists multi-users, please do fullly fetch as follow:
\u0009\u0009\u0009\u0009First: Switch to other user, re-install '蜂采'client and fetch again.
\u0009\u0009\u0009\u0009Second: Uninstall '蜂采' client, then switch to host user, use the 'Fast fetch' function"</string>
    <string name="tip_multi_users_scandir">"\u0009\u0009\u0009\u0009The phone exists multi-users, please do deep bk scan as follow:
\u0009\u0009\u0009\u0009First: Switch to other user, reinstall '蜂采' and check again.
\u0009\u0009\u0009\u0009Second: Uninstall '蜂采', then switch host user, use the 'Fast scan' function"</string>
    <string name="are_testing_basic_infomation">Checking Basic Informations ...</string>
</resources>
