<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/headerBar" android:layout_width="fill_parent" android:layout_height="50.0dip" layout="@layout/topbar" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/headerBar">
        <LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:background="@color/activity_bgcolor" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/headerBar">
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/ipTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
            <Button android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/loadButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/start_test" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/loadTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/sendTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="" android:lineSpacingMultiplier="1.3" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/sendProgressLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/headerBar" android:layout_alignParentBottom="true">
        <RelativeLayout android:layout_gravity="center" android:id="@id/progress_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ProgressBar android:id="@id/sendProgress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@style/ProgressBar" />
        </RelativeLayout>
        <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="" />
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/tvTimer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="TextView" />
    </LinearLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/main_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:layout_alignParentBottom="true">
        <Button android:textSize="22.0sp" android:textColor="#fff5f5f5" android:id="@id/uninstall" android:background="@drawable/head" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/uninstall" android:layout_alignParentBottom="true" />
        <TextView android:textColor="#ffff0000" android:id="@id/tip" android:padding="5.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/tip_multi_users" android:layout_above="@id/uninstall" />
    </RelativeLayout>
</RelativeLayout>